java script update

--- a/index.html
+++ b/index.html
@@ -154,6 +154,6 @@
     <!-- Product Section End -->
 
     <!-- JS Link -->
-    <script src="JS/main.js"></script>
+    <script src="Js/main.js"></script>
 </body>
 </html>
